Software/QuickUsbLinuxDistrib/Samples/QuickUsbDiagQT/QuickUSB.h

// QuickUSB settings
#define SETTING_EP26CONFIG                      0
#define SETTING_WORDWIDE                        1
#define SETTING_DATAADDRESS                     2
#define SETTING_FPGATYPE                        4
#define SETTING_CPUCONFIG                       5
#define SETTING_SLAVEFIFOFLAGS                  7
#define SETTING_I2CTL                           8
#define SETTING_PORTA                           9
#define SETTING_PORTB                           10
#define SETTING_PORTC                           11
#define SETTING_PORTD                           12
#define SETTING_PORTE                           13
#define SETTING_PINFLAGS                        15
#define SETTING_VERSIONSPEED                    17
/*- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  QuickUSB Error Codes
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -*/
#define QUICKUSB_ERROR_NO_ERROR                 0
#define QUICKUSB_ERROR_OUT_OF_MEMORY            1     
#define QUICKUSB_ERROR_CANNOT_OPEN_MODULE       2
#define QUICKUSB_ERROR_CANNOT_FIND_DEVICE       3
#define QUICKUSB_ERROR_IOCTL_FAILED             4
#define QUICKUSB_ERROR_INVALID_PARAMETER        5
#define QUICKUSB_ERROR_TIMEOUT                  6
#define QUICKUSB_ERROR_FUNCTION_NOT_SUPPORTED   7
#define QUICKUSB_ERROR_I2C_BUS_ERROR            8
#define QUICKUSB_ERROR_I2C_NO_ACK               9
#define QUICKUSB_ERROR_I2C_SLAVE_WAIT           10
#define QUICKUSB_ERROR_I2C_TIMEOUT              11
/*- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  External function declarations
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -*/
// General purpose calls
extern QRETURN QuickUsbGetLastError(QULONG *error);
extern QRETURN QuickUsbFindModules(QCHAR *nameList,
                                   QULONG length);
extern QRETURN QuickUsbOpen(QHANDLE *hDevice, 
                            QCHAR *deviceName);
extern QRETURN QuickUsbClose(QHANDLE hDevice);
extern QRETURN QuickUsbGetStringDescriptor(QHANDLE hDevice, 
                                           QBYTE index,
                                           QCHAR *buffer, 
                                           QWORD length);
extern QRETURN QuickUsbReadSetting(QHANDLE hDevice, 
                                   QWORD address, 
                                   QWORD *value);
extern QRETURN QuickUsbWriteSetting(QHANDLE hDevice,
                                    QWORD address, 
                                    QWORD value);
extern QRETURN QuickUsbStartFpgaConfiguration(QHANDLE hDevice);
extern QRETURN QuickUsbWriteFpgaData(QHANDLE hDevice, 
                                     QBYTE *fpgadata, 
                                     QULONG datalength);
extern QRETURN QuickUsbIsFpgaConfigured(QHANDLE hDevice, 
              	                        QWORD *isConfigured);
extern QRETURN QuickUsbGetFirmwareVersion(QHANDLE hDevice, 
                                          QWORD * MajorFirmwareVersion,
                                          QWORD * MinorFirmwareVersion,
                                          QWORD * BuildFirmwareVersion);
extern QRETURN QuickUsbReadDefault(QHANDLE hDevice,
                                   QWORD address, 
                                   QWORD *data);
extern QRETURN QuickUsbWriteDefault(QHANDLE hDevice,
                                    QWORD address, 
                                    QWORD data);